--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <link rel="icon" href="image/favicon.png" type="image/png">
 	
     <title>Sistema ezcon</title>
     <style>
@@ -111,7 +112,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="image/logo.png">
+        <img src="image/logo2.png">
     </div>
     <div class="container">
        
