--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	    <button style='position:absolute;left:45%'  id="ver">Mostrar Calculadora</button>
 	    <br>
     <br>
-    <button id="openModalBtn" style="'position:absolute;left:45%;background-color: #0566B1; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Fazer Anotações</button>
+  <!--  <button id="openModalBtn" style="'position:absolute;left:45%;background-color: #0566B1; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Fazer Anotações</button>
 
     <div id="myModal" style="display: none; position: fixed; z-index: 100; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0, 0, 0, 0.5);">
         <div style="background-color: #fff; margin: 15% auto; padding: 20px; border: 1px solid #888; width: 80%; max-width: 500px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); border-radius: 10px;">
@@ -159,9 +159,9 @@
             <textarea id="notes" style="width: 100%; height: 200px; margin-top: 10px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; font-size: 16px; resize: none;" placeholder="Escreva aqui..."></textarea>
             <button style="background-color: #0566B1; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 10px;" onclick="saveNotes()">Salvar</button>
         </div>
-    </div>
+    </div>-->
 
-    <script>
+    <!--<script>
         var modal = document.getElementById("myModal");
         var openModalBtn = document.getElementById("openModalBtn");
         var closeModalBtn = document.getElementById("closeModalBtn");
@@ -196,7 +196,7 @@
                 alert("Por favor, digite algo.");
             }
         }
-    </script>
+    </script>-->
 	         
 	       <style>
         
