--- a/index.html
+++ b/index.html
@@ -602,14 +602,14 @@
             credito.innerText = `Valor do crédito: R$ ${valorCredito.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
             primeiraParcela.innerText = `Primeira parcela: R$ ${dados.primeiraParcela.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
             proximasParcelas.innerText = `Próximas parcelas: R$ ${dados.proximasParcelas.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
-           /* resultadoComissao.innerText = `Comissão: R$ ${comissao.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
+            resultadoComissao.innerText = `Comissão: R$ ${comissao.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
 
             resultadoComissao.classList.add('explode');
 
             setTimeout(() => {
                 resultadoComissao.classList.remove('explode');
             }, 2000);
-        });*/
+        });
     </script>
 </body>
 </html>
