--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
 	         <br>
 	    <button style='position:absolute;left:45%'  id="ver">Mostrar Calculadora</button>
 	    <br>
+	     <br>
+	         <br>
+	     <a style='position:absolute;left:45%' href="pix.html">Pagar com QR code</a>
     <br>
   <!--  <button id="openModalBtn" style="'position:absolute;left:45%;background-color: #0566B1; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Fazer Anotações</button>
 
