--- a/pix.html
+++ b/pix.html
@@ -23,7 +23,7 @@
 <p>SIMPALA LANCADORA E ADMINISTRADORA DE CONSORCIOS LTDA </p>
 
 <p style="font-weight:bold;font-size:50px">87.945.218/0001-05.</p>
-<a href="#">Voltar</a>
+<a href="index.html">Voltar</a>
 
 </div>
 </body>
