--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <a href="https://veiculos.fipe.org.br/" id="fipeLink" target="_blank">Ver tabela FIPE</a>
 		<br>
 		<br>
-		<a style='position:absolute;left:45%' href="cadastrarclientes.html"><img src="image/cadastrar.png">Cadastrar Cliente</a>
+		<a style='position:absolute;left:45%' href="cadastrarclientes.html"><img src="image/cadastrar.png" width="1cm" height="1cm">Cadastrar Cliente</a>
 	         <br>
 	         <br>
 	        <a style='position:absolute;left:45%' href="textodevendas.html">Gerar Script de Vendas</a>
