--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
         <a href="https://veiculos.fipe.org.br/" id="fipeLink" target="_blank">Ver tabela FIPE</a>
 		<br>
 		<br>
-		<a style="position: absolute; left: 45%;" href="cadastrarclientes.html">
-    <img src="image/cadastrar.png" style="width: 1cm; height: 1cm; vertical-align: middle;">
-    Cadastrar Cliente
+		<a style="position: absolute; left: 45%; text-align: center;" href="cadastrarclientes.html">
+    <img src="image/cadastrar.png" style="width: 1cm; height: 1cm; display: block; margin: 0 auto;">
+    <span>Cadastrar Cliente</span>
 </a>
+
 
 	         <br>
 	         <br>
