--- a/index.html
+++ b/index.html
@@ -144,16 +144,32 @@
 	    <br>
 	         <br>
 	         <br>
-	        <a style='position:absolute;left:45%' href="textodevendas.html">Gerar Script de Vendas</a>
+	       		<a style="position: absolute; left: 45%; text-align: center;" href="textodevendas.html">
+    <img src="image/texto.png" style="width: 1cm; height: 1cm; display: block; margin: 0 auto;">
+    <span>Gerar Script de Vendas</span>
+</a>
 	         <br>
 	         <br>
-	         <a style='position:absolute;left:45%' href="criarpanfletos.html">Criar panfleto</a>
 	         <br>
 	         <br>
-	         <a style='position:absolute;left:45%' href="autenticar.html">Fazer uma simulação</a>
+	        <a style="position: absolute; left: 45%; text-align: center;" href="criarpanfletos.html">
+    <img src="image/panfletos.png" style="width: 1cm; height: 1cm; display: block; margin: 0 auto;">
+    <span>Criar panfleto</span>
+</a>
 	         <br>
 	         <br>
-	    <button style='position:absolute;left:45%'  id="ver">Mostrar Calculadora</button>
+	    <br>
+	         <br>
+
+	     <br>
+	         <br>
+	           <a style="position: absolute; left: 45%; text-align: center;" href="simulacao.html">
+    <img src="image/simulacao.png" style="width: 1cm; height: 1cm; display: block; margin: 0 auto;">
+    <span>Fazer uma simulação</span>
+</a>
+	         <br>
+	         <br>
+	    
 	    <br>
 	     <br>
 	         <br>
