--- a/index.html
+++ b/index.html
@@ -169,11 +169,17 @@
 </a>
 	         <br>
 	         <br>
+	      <br>
+	         <br>
 	    
 	    <br>
 	     <br>
 	         <br>
-	     <a style='position:absolute;left:45%' href="pix.html">Pagar com QR code</a>
+	     <a style="position: absolute; left: 45%; text-align: center;" href="pix.html">
+    <img src="image/qrcode.png" style="width: 1cm; height: 1cm; display: block; margin: 0 auto;">
+    <span>
+Pagar com QR code</span>
+</a>
     <br>
   <!--  <button id="openModalBtn" style="'position:absolute;left:45%;background-color: #0566B1; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Fazer Anotações</button>
 
