--- a/index.html
+++ b/index.html
@@ -132,8 +132,14 @@
             <div id="proximasParcelas"></div>
             <div id="comissao" class="comissao">A comissão será exibida aqui</div>
         </div>
-        <a href="https://veiculos.fipe.org.br/" id="fipeLink" target="_blank">Ver tabela FIPE</a>
+       <a style="position: absolute; left: 45%; text-align: center;" href="https://veiculos.fipe.org.br/">
+    <img src="image/fipe.png" style="width: 1cm; height: 1cm; display: block; margin: 0 auto;">
+    <span>Ver tabela FIPE</span>
+</a>
+
 		<br>
+		<br>
+	    <br>
 		<br>
 		<a style="position: absolute; left: 45%; text-align: center;" href="cadastrarclientes.html">
     <img src="image/cadastrar.png" style="width: 1cm; height: 1cm; display: block; margin: 0 auto;">
