--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
         <img src="image/logo2.png">
     </div>
     <div class="container">
+	    <p style="font-size: 18px; font-weight: bold; color: #2654A7; margin-bottom: 10px; text-align: center;">
+    Escolha o valor da carta de crédito:
+</p>
+
        
         <label for="tabela">Selecione a tabela:</label>
         <select id="tabela">
