--- a/index.html
+++ b/index.html
@@ -200,10 +200,7 @@ Pagar com QR code</span>
 	    <br>
 	     <br>
 	    <br>
-	    <br>
-	     <br>
-	    <br>
-	    <br>
+	    <center><h1>Mostrar calculadora</h1></center>
 	       <style>
         
         .modal {
