--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@ Pagar com QR code</span>
 	    <br>
 	     <br>
 	    <br>
-	    <center><h1>Mostrar calculadora</h1></center>
+	    <center>
+    <h1>Mostrar calculadora</h1>
+    <button id="ver">Abrir Calculadora</button>
+</center>
+
 	       <style>
         
         .modal {
