--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@ Pagar com QR code</span>
 	     <br>
 	    <br>
 	    <center>
-    <h1>Mostrar calculadora</h1>
-    <button id="ver">Abrir Calculadora</button>
+    
+    <button id="ver" style="background-image: url('calculadora.png'); background-size: cover; width: 100px; height: 100px; border: none;"></button>
+		    <p>Mostrar calculadora</p>
 </center>
 
 	       <style>
