--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ Pagar com QR code</span>
 	     <br>
 	    <br>
 	    <center>
-    
-    <img src="image/calculadora.png" width="1cm" height="1cm">
-		    <p>Mostrar calculadora</p>
+   
+    <button id="ver" style="background-image: url('image/calculadora.png'); background-size: cover; width: 100px; height: 100px; border: none;"></button>
+		     <p>Mostrar calculadora</p>
 </center>
 
 	       <style>
