--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Pagar com QR code</span>
 	    <br>
 	    <center>
    
-    <button id="ver" style="background-image: url('image/calculadora.png'); background-size: cover; width: 100px; height: 100px; border: none;"></button>
+    <button id="ver" style="background-image: url('image/calculadora.png'); background-size: cover; width: 1cm; height: 1cm; border: none;"></button>
 		     <p>Mostrar calculadora</p>
 </center>
 
