--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Pagar com QR code</span>
 	    <center>
    
     <button id="ver" style="background-image: url('image/calculadora.png'); background-size: cover; width: 1cm; height: 1cm; border: none;"></button>
-		     <p>Mostrar calculadora</p>
+		     <p style="color: blue; text-decoration: underline;>Mostrar calculadora</p>
 </center>
 
 	       <style>
