--- a/index.html
+++ b/index.html
@@ -200,10 +200,9 @@ Pagar com QR code</span>
 	    <br>
 	     <br>
 	    <br>
-	    <center>
-   
-    <button id="ver" style="background-image: url('image/calculadora.png'); background-size: cover; width: 1cm; height: 1cm; border: none;"></button>
-		     <p style="color: blue; text-decoration: underline;>Mostrar calculadora</p>
+	   <center>
+    <h1>Mostrar calculadora</h1>
+    <button id="ver">Abrir Calculadora</button>
 </center>
 
 	       <style>
