--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@ Pagar com QR code</span>
 	     <br>
 	    <br>
 	   <center>
-    <h1>Mostrar calculadora</h1>
-    <button id="ver">Abrir Calculadora</button>
+    
+    <img id="ver" src="image/calculadora.png" width="1cm" height="1cm">
 </center>
 
 	       <style>
