--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@ Pagar com QR code</span>
 	     <br>
 	    <br>
 	   <center>
-    
-    <img id="ver" src="image/calculadora.png" width="1cm" height="1cm">
+    <img id="ver" src="image/calculadora.png" style="width: 50px; height: 50px; cursor: pointer;" alt="Mostrar Calculadora">
 </center>
 
 	       <style>
