--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@ Pagar com QR code</span>
 	    <br>
 	   <center>
     <img id="ver" src="image/calculadora.png" style="width: 50px; height: 50px; cursor: pointer;" alt="Mostrar Calculadora">
+		   <br>
+		   <p style="color: blue; text-decoration: underline;">Mostrar calculadora</p>
+		   
 </center>
 
 	       <style>
