--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="image/logo2.png">
+        <img src="image/logo2.png" width="100%" height="10%">
     </div>
     <div class="container">
 	    <p style="font-size: 18px; font-weight: bold; color: #2654A7; margin-bottom: 10px; text-align: center;">
