--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             border-bottom: 1px solid #ddd;
         }
         .header img {
-            width: 200px;
+            width: 600px;
             height: auto;
         }
         .container {
@@ -112,7 +112,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="image/logo2.png" width="100%" height="10%">
+        <img src="image/logo2.png">
     </div>
     <div class="container">
 	    <p style="font-size: 18px; font-weight: bold; color: #2654A7; margin-bottom: 10px; text-align: center;">
