--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             border-bottom: 1px solid #ddd;
         }
         .header img {
-            width: 600px;
+            width: 200px;
             height: auto;
         }
         .container {
@@ -84,6 +84,7 @@
         @media (max-width: 768px) {
             .header img {
                 width: 150px;
+	        
             }
             h1 {
                 font-size: 1.2em;
@@ -112,7 +113,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="image/logo2.png">
+        <img src="image/logo.png">
     </div>
     <div class="container">
 	    <p style="font-size: 18px; font-weight: bold; color: #2654A7; margin-bottom: 10px; text-align: center;">
