--- a/textodevendas.html
+++ b/textodevendas.html
@@ -75,8 +75,8 @@
 
             <label for="companyAddress">Endereço da Empresa:</label>
             <select id="companyAddress" name="companyAddress" required>
-                <option value="Ez Consórcios Av. Lineu Machado, 419 - Jóquei Clube, Fortaleza - CE">Ez Consórcios Av. Lineu Machado, 419 - Jóquei Clube, Fortaleza - CE</option>
-                <option value="Ez Consórcios Av. Edson da Mota Correia, 620, Centro, Caucaia-CE">Ez Consórcios Av. Edson da Mota Correia, 620, Centro, Caucaia-CE</option>
+                <option value="GH Consórcios, do Mix Matheus  Av Senador Fernandes Távora, 84 - Henrique Jorge">GH Consórcios, do Mix Matheus  Av Senador Fernandes Távora, 84 - henrique jorge</option>
+                <option value="GH Consórcios nort shoping maracanaú, Av. Senador Carlos Jereissati, 100 - Maracanaú">GH Consórcios nort shoping maracanaú, Av. Senador Carlos Jereissati, 100 </option>
             </select>
 
             <button type="button" onclick="generateScript()">Gerar Script de Vendas</button>
