--- a/pix.html
+++ b/pix.html
@@ -16,11 +16,11 @@
 </style>
 
 <div id="content">
-<img src="image/pix.png">
+<img src="image/pix2.png">
 <br>
 <br>
 <img src="image/sympala.png">
-<p>SIMPALA LANCADORA E ADMINISTRADORA DE CONSORCIOS LTDA </p>
+<p>GH CONSORCIOS LTDA </p>
 
 <p style="font-weight:bold;font-size:50px">87.945.218/0001-05.</p>
 <a href="index.html">Voltar</a>
