--- a/pix.html
+++ b/pix.html
@@ -19,7 +19,7 @@
 <img src="image/pix2.png">
 <br>
 <br>
-<img src="image/sympala.png">
+<img src="image/ghlogo.png">
 <p>GH CONSORCIOS LTDA </p>
 
 <p style="font-weight:bold;font-size:50px">87.945.218/0001-05.</p>
