--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div id="credito"></div>
             <div id="primeiraParcela"></div>
             <div id="proximasParcelas"></div>
-            <div id="comissao" class="comissao">A comissão será exibida aqui</div>
+            <!--<div id="comissao" class="comissao">A comissão será exibida aqui</div> -->
         </div>
 	    <br>
 	    <br>
