--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="image/ghlogo.png">
+        <img src="image/ghlogo2.png">
     </div>
     <div class="container">
 	    <p style="font-size: 18px; font-weight: bold; color: #2654A7; margin-bottom: 10px; text-align: center;">
