--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <link rel="icon" href="image/favicon2.png" type="image/png">
 	
-    <title>Sistema ezcon</title>
+    <title>Sistema ghcon</title>
     <style>
         body {
             font-family: Arial, sans-serif;
