--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <img src="image/ghlogo2.png">
     </div>
     <div class="container">
-	    <p style="font-size: 18px; font-weight: bold; color: #2654A7; margin-bottom: 10px; text-align: center;">
+	    <p style="font-size: 18px; font-weight: bold; color: black; margin-bottom: 10px; text-align: center;">
     Escolha o valor da carta de crédito:
 </p>
 
