--- a/pix.html
+++ b/pix.html
@@ -16,13 +16,13 @@
 </style>
 
 <div id="content">
-<img src="image/pix2.png">
+<img src="image/pix4.png">
 <br>
 <br>
 <img src="image/ghlogo2.png">
 <p>GH CONSORCIOS LTDA </p>
 
-<p style="font-weight:bold;font-size:50px">87.945.218/0001-05.</p>
+<p style="font-weight:bold;font-size:50px">297565120001-64</p>
 <a href="index.html">Voltar</a>
 
 </div>
