--- a/pix.html
+++ b/pix.html
@@ -1,30 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagar com QR Code</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pagar com QR Code</title>
+  <style>
+    #content {
+      position: absolute;
+      top: 1cm;
+    }
+  </style>
 </head>
 <body>
-<style>
-	#content{
-		position:absolute;
-		
-		top:1cm;
-		
-	}
-</style>
-
-<div id="content">
-<img src="#">
-<br>
-<br>
-<img src="image/ghlogo2.png">
-<p>GH CONSORCIOS LTDA </p>
-
-<p style="font-weight:bold;font-size:50px">297565120001-64</p>
-<a href="index.html">Voltar</a>
-
-</div>
+  <div id="content">
+    <img src="#" alt="Imagem não encontrada"> 
+    <br><br>
+    <img src="image/ghlogo2.png" alt="Logo GH Consórcios">
+    <p>GH CONSORCIOS LTDA</p>
+    <p style="font-weight: bold; font-size: 50px">297565120001-64</p>
+    <a href="index.html">Voltar</a>
+  </div>
 </body>
 </html>
+```
+
+Correções realizadas
+1. Adicionado `alt` às tags `img` para acessibilidade.
+2. Movido o estilo CSS para dentro da tag `<head>`.
+3. Mantido o resto do código original.
+
+Dicas
+1. Verifique se o arquivo `ghlogo2.png` está na pasta `image`.
+2. Substitua `#` pelo caminho correto da primeira imagem.
+3. Utilize unidades de medida consistentes (cm, px, %).
+4. Considere utilizar um framework CSS para melhorar a responsividade.
